# PortfolioWebsite

./: Cargo.toml  Dockerfile  contact.html  index.css  index.html  main.ts  package-lock.json  package.json  projects.html  styles.css  template.html  tsconfig.json  webpack.config.js
articles/: article-list  contact  ftc  min-ss  rebind2
public/: index.html  projects.html  styles.css
src/: index.html  index.tsx  lib.rs  main.rs
static/: style.css
views/: article.ejs
