[package]
name = "qwed81-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version="0.6.18", features=["headers"] }
dashmap = "5.4.0"
dotenvy = "0.15.7"
futures = "0.3.28"
html_parser = "0.7.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version="1.28.0", features=["full"] }
tower = "0.4.13"
tower-http = { version="0.4.0", features=["fs"] }

